# navigate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  __main__.py  compare_extractors.py  corpus.py  make_binary_fixtures.py  metrics.py  providers.py  report.py  runner.py  thresholds.json
benchmarks/corpus/binary_fixtures/: data_workbook.xlsx  simple_docx.docx  slide_deck.pptx  table_docx.docx
benchmarks/corpus/docs/: data_strategy.md  meeting_notes.md  release_governance.md  release_governance_v2.md  release_management.md  salesforce_platform.txt
benchmarks/corpus/gold/: ask.json  classify.json  consolidate.json  extract.json  extract_binary.json
benchmarks/stages/: __init__.py  ask_bench.py  classify_bench.py  consolidate_bench.py  extract_bench.py  scan_bench.py
config/: api.yml  compliance.yml  connectors.yml  domains.yml  extraction.yml  governance.yml  jena.yml  link_patterns.yml  llm.yml  performance.yml  pricing.yml  sources.yml
config/standards/: eurocode2_sample.yml  iso27001.yml
docs/: classification-audit.md  code-indexing.md  compliance.md  docling-markitdown-study.md  llm-optimization.md  mcp.md  navigate-api.md
docs/how-to/: README.md  ask-questions-with-graphrag.md  build-a-knowledge-graph.md  catalog-your-files.md  discover-and-classify-links.md  explore-the-knowledge-graph.md  govern-your-knowledge.md  ground-an-ai-agent-in-your-code.md  publish-to-rdf-and-sparql.md  remove-artifacts.md
queries/: all_capabilities.rq  all_decisions.rq  all_platforms.rq  all_relationships.rq  all_teams.rq  compliance_coverage.rq  compliance_gaps.rq  controls_satisfying.rq  evidence_for_object.rq  knowledge_domains.rq  object_dependencies.rq  related_capabilities.rq  related_objects.rq  requirements_for_standard.rq  top_relationships.rq
scripts/: dev-permissions.sh
src/catalog/: __init__.py  cli.py  config.py  db.py  env.py  events.py  extraction.py  hashing.py  links.py  models.py  queue.py  scanner.py  textmatch.py  watcher.py
src/catalog/api/: __init__.py  app.py  config.py  dependencies.py  errors.py  jobs_context.py  pagination.py  repository.py  schemas.py  serializers.py  server.py
src/catalog/api/routes/: __init__.py  artifacts.py  ask.py  compliance.py  cost.py  evidence.py  governance.py  graph.py  health.py  jobs.py  knowledge.py  links.py  rdf.py  relationships.py
src/catalog/code/: __init__.py  chunking.py  languages.py  parser.py  structure.py  to_result.py
src/catalog/commands/: __init__.py  _common.py  benchmark.py  catalog.py  doctor.py  knowledge.py  links.py  rdf.py  review.py  semantic.py  serve.py
src/catalog/compliance/: __init__.py  cli.py  config.py  importer.py  models.py  repository.py  service.py  sync.py
src/catalog/connectors/: __init__.py  _http.py  base.py  cli.py  config.py  confluence.py  github.py  google_drive.py  jira.py  sharepoint.py  sync.py
src/catalog/cost/: __init__.py  ledger.py  pricing.py  repository.py  usage.py
src/catalog/extractors/: __init__.py  base.py  config.py  docling_extractor.py  docx_extractor.py  markitdown_extractor.py  pdf_extractor.py  pptx_extractor.py  vision_pdf_extractor.py  xlsx_extractor.py
src/catalog/governance/: __init__.py  agent_review.py  alerts.py  cli.py  config.py  dashboard.py  domains.py  drift.py  export.py  freshness.py  ingestion.py  models.py  orphans.py  ownership.py  provenance.py  quality.py  repository.py  service.py
src/catalog/graph/: __init__.py  cli.py  client.py  domains.py  explorer.py  export.py  health.py  loader.py  network.py
src/catalog/graphrag/: __init__.py  assistant.py  cli.py  confidence.py  context.py  intent.py  memory.py  observability.py  prompts.py  retrieval.py
src/catalog/jobs/: __init__.py  models.py  repository.py  service.py
src/catalog/knowledge/: __init__.py  analytics.py  export.py  ids.py  models.py  prompts.py  references.py  repository.py  resolution.py  scope.py  scoring.py  service.py
src/catalog/links/: __init__.py  classifier.py  config.py  normalizer.py  repository.py  service.py
src/catalog/maintenance/: __init__.py  service.py
src/catalog/mcp/: __init__.py  cli.py  config.py  serializers.py  server.py  tools.py
src/catalog/rdf/: __init__.py  config.py  export.py  fuseki.py  namespaces.py  ontology.py
src/catalog/semantic/: __init__.py  analytics.py  code_prompts.py  config.py  domains.py  equation_ast.py  models.py  parser.py  prompts.py  repository.py  routing.py  service.py
src/catalog/semantic/providers/: __init__.py  _http.py  base.py  claude_provider.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_agent_review.py  test_api.py  test_api_compliance.py  test_benchmarks.py  test_clean_source.py  test_cli.py  test_cli_compliance.py  test_cli_governance.py  test_cli_graph.py  test_cli_graphrag.py  test_cli_rdf.py  test_cli_semantic.py  test_code_indexing.py  test_compliance_assess.py  test_compliance_extraction.py  test_compliance_gaps.py  test_compliance_importer.py  test_cost.py  test_db_connect.py  test_env.py  test_equation_ast.py  test_equation_extraction.py  test_events.py  test_governance_alerts.py  test_governance_change.py  test_governance_drift.py  test_governance_freshness.py  test_governance_ingestion.py  test_governance_ownership.py  test_governance_quality.py  test_governance_review.py  test_graph_client.py  test_graph_explorer.py  test_graphrag.py  test_hashing.py  test_knowledge_consolidation.py  test_knowledge_growth.py  test_knowledge_references.py  test_knowledge_resolution.py  (+20 more)
