[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-catalog"
version = "0.1.0"
description = "Local-first professional knowledge catalog for indexing documents without moving source files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "watchdog>=4.0",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "cryptography>=3.1",
  "rdflib>=7.0",
  "requests>=2.31",
  "networkx>=3.0",
  "rich>=13.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
catalog = "catalog.cli:main"
navigate = "catalog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
