[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-catalog"
version = "0.1.0"
description = "Local-first professional knowledge catalog for indexing documents without moving source files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "watchdog>=4.0",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "pymupdf>=1.24",
  "cryptography>=3.1",
  "rdflib>=7.0",
  "requests>=2.31",
  "networkx>=3.0",
  "rich>=13.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
catalog = "catalog.cli:main"
navigate = "catalog.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["catalog*", "benchmarks*"]

[tool.setuptools.package-data]
benchmarks = ["corpus/docs/*", "corpus/gold/*.json", "thresholds.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle errors; I: import sorting; B: bugbear;
# UP: pyupgrade; C4: comprehensions; SIM: simplifications.
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
# E501 (line length) is reported by the formatter, not the linter, to avoid
# fighting over strings/URLs that cannot be wrapped.
# UP042: rewriting ``class X(str, Enum)`` to ``StrEnum`` changes ``str(member)``
# from ``"X.member"`` to the value, which would alter persisted/serialized output
# - a behavioural change, not a cleanup, so it stays opt-in.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over some lint rules (asserts, local shadowing).
"tests/*" = ["B011"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be call expressions in
# parameter defaults; that is the framework idiom, not the B008 anti-pattern.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Body",
  "fastapi.Security",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["catalog"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# Pragmatic gate for a large existing codebase: catch obvious type errors
# without demanding annotations everywhere. Tighten incrementally.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
